# Claude-video-plugins

./: README.md  marketplace.json
.claude-plugin/: marketplace.json
carry-forward/: README.md
carry-forward/.claude-plugin/: marketplace.json  plugin.json
carry-forward/skills/save/templates/: context-template.md
carry-forward/src/: server.py  stop_hook.py
carry-forward/tests/: conftest.py  test_server.py
context-keeper/: .gitignore  .mcp.json  README.md  pyproject.toml
context-keeper/.claude-plugin/: marketplace.json  plugin.json
context-keeper/hooks/: hooks.json
context-keeper/skills/clear/: SKILL.md
context-keeper/skills/load/: SKILL.md
context-keeper/skills/load/examples/: sample-context.md
context-keeper/skills/save/: SKILL.md
context-keeper/skills/setup/: SKILL.md
context-keeper/src/: server.py  stop_hook.py
context-keeper/tests/: test_server.py  test_stop_hook.py
deep-engineer/: .mcp.json  README.md  pyproject.toml
deep-engineer/.claude-plugin/: marketplace.json  plugin.json
deep-engineer/hooks/: hooks.json
deep-engineer/skills/setup/: SKILL.md
deep-engineer/skills/solve/: SKILL.md
deep-engineer/skills/status/: SKILL.md
deep-engineer/src/: pretool_hook.py  server.py  stop_hook.py
diff-narrator/src/: posttool_hook.py
video-insight/: .gitignore  .mcp.json  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
video-insight/.claude-plugin/: marketplace.json  plugin.json
video-insight/.github/: PULL_REQUEST_TEMPLATE.md
video-insight/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
video-insight/.github/workflows/: ci.yml
video-insight/examples/sample_output/: index.html  manifest.json
video-insight/skills/analyze-video/: SKILL.md
video-insight/skills/build-from-video/: SKILL.md
video-insight/skills/changelog/: SKILL.md
video-insight/skills/compare-videos/: SKILL.md
video-insight/skills/describe-3d/: SKILL.md
video-insight/skills/design-spec/: SKILL.md
video-insight/skills/export-tokens/: SKILL.md
video-insight/skills/extract-colors/: SKILL.md
video-insight/skills/figma-tokens/: SKILL.md
video-insight/skills/generate-animations/: SKILL.md
video-insight/skills/generate-prd/: SKILL.md
video-insight/skills/generate-tests/: SKILL.md
video-insight/skills/playwright-tests/: SKILL.md
video-insight/skills/storybook/: SKILL.md
video-insight/skills/user-flow/: SKILL.md
video-insight/skills/watch/: SKILL.md
video-insight/skills/write-copy/: SKILL.md
video-insight/src/: __init__.py  action_builder.py  server.py  video_analyzer.py
video-insight/tests/: conftest.py  test_action_builder.py  test_video_analyzer.py
