[project]
name = "video-insight"
version = "1.1.0"
description = "Claude Code plugin for deep video understanding — 17 MCP tools that extract structured manifests from any video recording"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
keywords = ["claude", "mcp", "video", "ai", "ocr", "transcription", "screen-recording", "design-tokens", "storybook"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "fastmcp>=2.0.0",
  "numpy>=1.21.0",
  "opencv-python-headless>=4.8.0",
  "scenedetect[opencv]>=0.6.0",
  "faster-whisper>=1.0.0",
  "easyocr>=1.7.0",
]

[project.optional-dependencies]
# Required only if using action_builder.py directly (not needed for Claude Code plugin usage)
api = [
  "anthropic>=0.30.0",
]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/gowtham/video-insight"
Repository = "https://github.com/gowtham/video-insight"
Issues = "https://github.com/gowtham/video-insight/issues"

[project.scripts]
video-insight-server = "src.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
